// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display confetti on player win 1`] = `
<div
  className="flex flex-col bg-white shadow-xl sm:rounded-2xl border-4  border-white sm: w-full"
>
  <canvas
    aria-label="confetti"
    height={768}
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 2,
      }
    }
    width={1024}
  />
  <div
    className="text-center w-full mb-2 mt-2"
  >
    <h1
      className="text-gray-600 font-bold text-2xl"
    >
      YOU WON, DEAL CARDS
    </h1>
  </div>
  <div
    className="flex justify-between"
  >
    <button
      className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
      disabled={false}
      id="deal"
      onClick={[Function]}
    >
      <div
        className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
      >
        DEAL
        <svg
          aria-hidden="true"
          className="w-5 text-gray-500 sm:flex-row ml-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M4 2a2 2 0 00-2 2v11a3 3 0 106 0V4a2 2 0 00-2-2H4zm1 14a1 1 0 100-2 1 1 0 000 2zm5-1.757l4.9-4.9a2 2 0 000-2.828L13.485 5.1a2 2 0 00-2.828 0L10 5.757v8.486zM16 18H9.071l6-6H16a2 2 0 012 2v2a2 2 0 01-2 2z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
    <button
      className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
      disabled={true}
      id="hit"
      onClick={[Function]}
    >
      <div
        className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
      >
        HIT
        <svg
          aria-hidden="true"
          className="h-5 w-5 text-gray-500 sm:flex-row ml-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
    <button
      className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
      disabled={true}
      id="doubleDown"
      onClick={[Function]}
    >
      <div
        className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
      >
        DOUBLE DOWN
        <h1
          className="text-base text-gray-500 sm:flex-row ml-2"
        >
          x2
        </h1>
      </div>
    </button>
    <button
      className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
      disabled={true}
      id="stand"
      onClick={[Function]}
    >
      <div
        className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
      >
        STAND
        <svg
          aria-hidden="true"
          className="h-5 w-5 text-gray-500 sm:flex-row ml-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 12a2 2 0 100-4 2 2 0 000 4z"
          />
          <path
            clipRule="evenodd"
            d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
    <button
      className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
      disabled={true}
      id="restart"
      onClick={[Function]}
    >
      <div
        className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
      >
        RESTART
        <svg
          aria-hidden="true"
          className="h-5 w-5 text-gray-500 sm:flex-row ml-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="flex bg-gray-200 justify-center"
  >
    <h1
      className="bg-gray-200 text-gray-900 text-center text-lg mt-1"
    >
      SCORE: 
      21
    </h1>
    <h1
      className="bg-gray-200 ml-20 text-gray-900 text-center text-lg mt-1"
    >
      HOUSE: 
      0
    </h1>
  </div>
  <div
    className="flex justify-evenly bg-gray-200 items-center rounded-bl-2xl rounded-br-2xl"
  >
    <div
      className="flex text-center flex-col"
    >
      <h1
        className="text-gray-700 text-lg sm:text-2xl sm:font-bold"
      >
        BET
      </h1>
      <h1
        className="text-gray-700 text-lg sm:text-xl sm:font-bold"
      >
        $
      </h1>
    </div>
    <div
      className="flex justify-center py-4"
    >
      <img
        alt="Chip 5 value"
        className="sm:ml-4 sm:mr-4 w-12 h-12 sm:w-16 sm:h-16 grayscale"
        onClick={[Function]}
        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-5.png"
      />
      <img
        alt="Chip 10 value"
        className="sm:ml-4 sm:mr-4 w-12 h-12 sm:w-16 sm:h-16 grayscale"
        onClick={[Function]}
        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-7.png"
      />
      <img
        alt="Chip 15 value"
        className="sm:ml-4 sm:mr-4 w-12 h-12 sm:w-16 sm:h-16 grayscale"
        onClick={[Function]}
        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-4.png"
      />
      <img
        alt="Chip 50 value"
        className="sm:ml-4 sm:mr-4 w-12 h-12 sm:w-16 sm:h-16 grayscale"
        onClick={[Function]}
        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-3.png"
      />
    </div>
    <div
      className="flex text-center flex-col"
    >
      <h1
        className="text-gray-700 text-lg sm:text-2xl sm:font-bold"
      >
        CHIPS
      </h1>
      <h1
        className="text-gray-700 text-lg sm:text-xl sm:font-bold"
      >
        $
      </h1>
    </div>
  </div>
</div>
`;

exports[`should render Deal button undisabled when inPlay is false 1`] = `
<div
  className="flex flex-col bg-white shadow-xl sm:rounded-2xl border-4  border-white sm: w-full"
>
  <div
    className="text-center w-full mb-2 mt-2"
  >
    <h1
      className="text-gray-600 font-bold text-2xl"
    >
      DEAL CARDS
    </h1>
  </div>
  <div
    className="flex justify-between"
  >
    <button
      className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
      disabled={false}
      id="deal"
      onClick={[Function]}
    >
      <div
        className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
      >
        DEAL
        <svg
          aria-hidden="true"
          className="w-5 text-gray-500 sm:flex-row ml-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M4 2a2 2 0 00-2 2v11a3 3 0 106 0V4a2 2 0 00-2-2H4zm1 14a1 1 0 100-2 1 1 0 000 2zm5-1.757l4.9-4.9a2 2 0 000-2.828L13.485 5.1a2 2 0 00-2.828 0L10 5.757v8.486zM16 18H9.071l6-6H16a2 2 0 012 2v2a2 2 0 01-2 2z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
    <button
      className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
      disabled={false}
      id="hit"
      onClick={[Function]}
    >
      <div
        className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
      >
        HIT
        <svg
          aria-hidden="true"
          className="h-5 w-5 text-gray-500 sm:flex-row ml-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
    <button
      className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
      disabled={false}
      id="doubleDown"
      onClick={[Function]}
    >
      <div
        className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
      >
        DOUBLE DOWN
        <h1
          className="text-base text-gray-500 sm:flex-row ml-2"
        >
          x2
        </h1>
      </div>
    </button>
    <button
      className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
      disabled={false}
      id="stand"
      onClick={[Function]}
    >
      <div
        className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
      >
        STAND
        <svg
          aria-hidden="true"
          className="h-5 w-5 text-gray-500 sm:flex-row ml-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 12a2 2 0 100-4 2 2 0 000 4z"
          />
          <path
            clipRule="evenodd"
            d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
    <button
      className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
      disabled={true}
      id="restart"
      onClick={[Function]}
    >
      <div
        className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
      >
        RESTART
        <svg
          aria-hidden="true"
          className="h-5 w-5 text-gray-500 sm:flex-row ml-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    className="flex bg-gray-200 justify-center"
  >
    <h1
      className="bg-gray-200 text-gray-900 text-center text-lg mt-1"
    >
      SCORE: 
    </h1>
    <h1
      className="bg-gray-200 ml-20 text-gray-900 text-center text-lg mt-1"
    >
      HOUSE: 
      ?
    </h1>
  </div>
  <div
    className="flex justify-evenly bg-gray-200 items-center rounded-bl-2xl rounded-br-2xl"
  >
    <div
      className="flex text-center flex-col"
    >
      <h1
        className="text-gray-700 text-lg sm:text-2xl sm:font-bold"
      >
        BET
      </h1>
      <h1
        className="text-gray-700 text-lg sm:text-xl sm:font-bold"
      >
        $
      </h1>
    </div>
    <div
      className="flex justify-center py-4"
    >
      <img
        alt="Chip 5 value"
        className="sm:ml-4 sm:mr-4 w-12 h-12 sm:w-16 sm:h-16 grayscale"
        onClick={[Function]}
        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-5.png"
      />
      <img
        alt="Chip 10 value"
        className="sm:ml-4 sm:mr-4 w-12 h-12 sm:w-16 sm:h-16 grayscale"
        onClick={[Function]}
        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-7.png"
      />
      <img
        alt="Chip 15 value"
        className="sm:ml-4 sm:mr-4 w-12 h-12 sm:w-16 sm:h-16 grayscale"
        onClick={[Function]}
        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-4.png"
      />
      <img
        alt="Chip 50 value"
        className="sm:ml-4 sm:mr-4 w-12 h-12 sm:w-16 sm:h-16 grayscale"
        onClick={[Function]}
        src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1151732/chip-3.png"
      />
    </div>
    <div
      className="flex text-center flex-col"
    >
      <h1
        className="text-gray-700 text-lg sm:text-2xl sm:font-bold"
      >
        CHIPS
      </h1>
      <h1
        className="text-gray-700 text-lg sm:text-xl sm:font-bold"
      >
        $
      </h1>
    </div>
  </div>
</div>
`;
